# Treinamento-2D

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/componentes/: formigas.cpp  formigas.h  passaro.cpp  passaro.h  planta.cpp  planta.h
src/elementos/elementosFormigas/: boloDeChocolate.cpp  boloDeChocolate.h  granuladoFormicida.cpp  granuladoFormicida.h
src/elementos/elementosPassaros/: gafanhoto.cpp  gafanhoto.h  minhoca.cpp  minhoca.h
src/fertilizantes/: fertilizante_industrial.cpp  fertilizante_industrial.h  fertilizante_organico.cpp  fertilizante_organico.h
